# ChangeLog for dev-java/hibernate
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Jan 2007; Miroslav Šulc <fordfrog@gentoo.org> hibernate-3.2.1.ebuild:
  Reverted back my changed as discussed with caster

  12 Jan 2007; Vlastimil Babka <caster@gentoo.org>
  hibernate-3.0.5-r2.ebuild, hibernate-3.1.3-r1.ebuild,
  hibernate-3.2.1.ebuild:
  Change ant-core dep to ant, remove jdbc2-stdext to be in sync with changes
  in portage.
