@@ -6,6 +6,7 @@ DIST hibernate-2.1.8.tar.gz 17348255 RMD160 cdc7c9723c30c048de2f27472c40902721a2
 DIST hibernate-3.0.5.tar.gz 16097031 RMD160 720e9f16b8caea3245a9b82075a1d0957e790d5a SHA1 49897f3c4cccf0fe9fbe7903a509a0ccc996958b SHA256 6971edbbb7bda9e0d2b96a0a652c9040ccde9f17dfae0fe72cc017c3b29196fa
 DIST hibernate-3.1.3.tar.gz 18529984 RMD160 3c7a2a74d4c9f35d4250f0f0ef1fd478c7fd1828 SHA1 b27169ede61e154cf5641b5a960f9074108d55a1 SHA256 e34feddabd7e1a432f11c670d08338720beb6c1dc5bb62952612f05260944c49
 DIST hibernate-3.2.1.ga.tar.gz 19973633 RMD160 1675516bc50b8502c83baedc77e86a6fab791427 SHA1 49d9c1cf96423a0db879a7910e1831bd86683de8 SHA256 28921090fc373fd9e43551143f9a32d3446d1bec087f9a91b966ea7b79efdea2
+DIST hibernate-3.2.2.ga.tar.gz 20176584 RMD160 bd58daf8ab4f5dd32fb1368bf28ff4a7cf9ff0dc SHA1 164631b8b34e853b170d48e77d46dab47c2f3fdb SHA256 6e44fc543194a911b35987fae89a50927986b0236327d313d165cffd70fad18d
 EBUILD hibernate-2.1.8-r2.ebuild 2487 RMD160 657c2ae1e97bf4e6c786553e61451ce646efbd1a SHA1 dc66538d264b9ab1bd2ed2e9532a17ecbe71dcf4 SHA256 18e1f22aa7be04f5163b641bdecaf1ccd1e6bc197278fc393bf8e940bdde11ce
 MD5 07e747fd2fa222d006aba19a1e12d739 hibernate-2.1.8-r2.ebuild 2487
 RMD160 657c2ae1e97bf4e6c786553e61451ce646efbd1a hibernate-2.1.8-r2.ebuild 2487
@@ -22,10 +23,14 @@ EBUILD hibernate-3.2.1.ebuild 2965 RMD160 90a6e7e2c3f274fc1c5bc694a596f6c893b932
 MD5 51fade640a497964006ab0711e4d7354 hibernate-3.2.1.ebuild 2965
 RMD160 90a6e7e2c3f274fc1c5bc694a596f6c893b93274 hibernate-3.2.1.ebuild 2965
 SHA256 a522345fdafaafb4e007d37565a0d60915ccb64769c42be6beb0b90bd4ce79f0 hibernate-3.2.1.ebuild 2965
-MISC ChangeLog 473 RMD160 2c097fcf1a274970e679356f4b524ff458a0c7be SHA1 7b95f3ddebc5246a159e336942c19016be521a0a SHA256 fb292e99e613e34be2da2a460fe9156e4780879ced680c8652ee2ebb9461775f
-MD5 a541a352acd62336ed46e5beb02cca3c ChangeLog 473
-RMD160 2c097fcf1a274970e679356f4b524ff458a0c7be ChangeLog 473
-SHA256 fb292e99e613e34be2da2a460fe9156e4780879ced680c8652ee2ebb9461775f ChangeLog 473
+EBUILD hibernate-3.2.2.ebuild 2965 RMD160 90a6e7e2c3f274fc1c5bc694a596f6c893b93274 SHA1 c8a298a74dbe859607c757a2e4363e6bc8bf8c56 SHA256 a522345fdafaafb4e007d37565a0d60915ccb64769c42be6beb0b90bd4ce79f0
+MD5 51fade640a497964006ab0711e4d7354 hibernate-3.2.2.ebuild 2965
+RMD160 90a6e7e2c3f274fc1c5bc694a596f6c893b93274 hibernate-3.2.2.ebuild 2965
+SHA256 a522345fdafaafb4e007d37565a0d60915ccb64769c42be6beb0b90bd4ce79f0 hibernate-3.2.2.ebuild 2965
+MISC ChangeLog 591 RMD160 b2657a1ac1dba4177b95f7736f36081b893b8de6 SHA1 62c5e80cec9173455e8647f64cdce65533e7ed15 SHA256 ffc35bc5ea7ebcb8b616acaa644894c87e0cd0428eca29abea7bc3fb1806484a
+MD5 cfeb9223a3e3a4227311fc42e3b51449 ChangeLog 591
+RMD160 b2657a1ac1dba4177b95f7736f36081b893b8de6 ChangeLog 591
+SHA256 ffc35bc5ea7ebcb8b616acaa644894c87e0cd0428eca29abea7bc3fb1806484a ChangeLog 591
 MISC metadata.xml 223 RMD160 3eea44b7fbdbf35f543c9cc3c85818ad94566e2c SHA1 868be92d7dbbdb2e3361d7edec377585265fc55e SHA256 33ac0f91bed9e9bc55848382a55ba60e12bc820ae6f86ad0e8b564c143e045cc
 MD5 7fef3acf21a35b12e1e002a50eead12f metadata.xml 223
 RMD160 3eea44b7fbdbf35f543c9cc3c85818ad94566e2c metadata.xml 223
@@ -42,3 +47,6 @@ SHA256 c3c603703e9e3ab8263a26796fbc3f3612e5d1f36a047648c920f0a756e45d33 files/di
 MD5 7085b8d8678d2b957d7781c4e00fb292 files/digest-hibernate-3.2.1 262
 RMD160 ddb6d4a20650fe4ead3a8c14eea8971294c25fa7 files/digest-hibernate-3.2.1 262
 SHA256 b3cbfe3b6c65f87a926786c88c94e32a5c805e078f865b78788c7ef0a06fc518 files/digest-hibernate-3.2.1 262
+MD5 8822f385e0701c9de3e652bcd95546d3 files/digest-hibernate-3.2.2 262
+RMD160 06345e5e5d0f257bb293f008b8b6a89285326638 files/digest-hibernate-3.2.2 262
+SHA256 7e9899556131d3904dabcfb4e3276680af0428a265f424bb6c03bd7c15c16e1f files/digest-hibernate-3.2.2 262
