@@ -1,0 +1,3 @@
+MD5 7d8f76ce659d810094c5d6a6821d290a hibernate-3.2.2.ga.tar.gz 20176584
+RMD160 bd58daf8ab4f5dd32fb1368bf28ff4a7cf9ff0dc hibernate-3.2.2.ga.tar.gz 20176584
+SHA256 6e44fc543194a911b35987fae89a50927986b0236327d313d165cffd70fad18d hibernate-3.2.2.ga.tar.gz 20176584
