@@ -2,7 +2,12 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-  12 Jan 2007; Miroslav Šulc <fordfrog@gentoo.org> hibernate-3.2.1.ebuild:
+* hibernate-3.2.2.ebuild (16 Mar 2007)
+
+  16 Mar 2007; Joshua Nichols <nichoj@gentoo.org> .ebuild:
+  Version bump.
+
+  12 Jan 2007; Miroslav Å ulc <fordfrog@gentoo.org> hibernate-3.2.1.ebuild:
   Reverted back my changed as discussed with caster
 
   12 Jan 2007; Vlastimil Babka <caster@gentoo.org>
